syntax = "proto3";

import "yandex/cloud/priv/datasphere/v2/lzy-auth.proto";
import "yandex/cloud/priv/datasphere/v2/lzy-servant.proto";

package yandex.cloud.priv.datasphere.v2;

option go_package = "datasphere";
option java_outer_classname = "Terminal";
option java_package = "yandex.cloud.priv.datasphere.v2.lzy";


service LzyTerminal {
  rpc ConfigureSlot (SlotCommand) returns (SlotCommandStatus);
  rpc Update (Auth) returns (ExecutionStarted);
  rpc Status (Empty) returns (ServantStatus);
}
